# Sendspin-TUI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: app.rs  event.rs  main.rs  protocol.rs  shared.rs  tui.rs  ui.rs
