[package]
name = "sendspin-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
sendspin = "0.1.2"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.17"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
color-eyre = "0.6"
